# Laboratory7

./: app.py  pyproject.toml  requirements.txt
