[project]
name = "lab7-app"
version = "1.0.0"
# Pilitin na gamitin ang Python 3.11 dahil ayaw ng 3.14 sa TensorFlow
requires-python = ">=3.11,<3.13" 
dependencies = [
    "streamlit",
    # Pin限定 ang TF version para walang C-API error sa pag-load ng .h5
    "tensorflow>=2.15.0,<2.17.0", 
    "Pillow",
    "numpy<2.0.0"
]
